--- a/section1/grade-submission-api-pod.yaml
+++ b/section1/grade-submission-api-pod.yaml
@@ -1,33 +1,32 @@
 apiVersion: v1
 kind: Pod
-metadata: # this holds the pod datails
-  name: grade-submission-portal
+metadata:
+  name: grade-submission-api
   labels: # Properly grouping and categorizing the pod for easy querrying 
     app.kubernetes.io/name: grade-submission # Group label
-    app.kubernetes.io/component: frontend #what this container use for
-    app.kubernetes.io/instance: grade-submission-portal #unique name of this container
+    app.kubernetes.io/component: backend #what this container use for
+    app.kubernetes.io/instance: grade-submission-api #unique name of this container
 spec:
   containers: # this holds the container details
-  - name: grade-submission-portal # in 1:1 pod:container both should have the same name
-    image: rslim087/kubernetes-course-grade-submission-portal
+  - name: grade-submission-api # in 1:1 pod:container both should have the same name
+    image: rslim087/kubernetes-course-grade-submission-api:stateless
     resources:
       requests: #Kubernetes will decide which node to accomodate our pod base on the resource 
         memory: "128Mi"
-        cpu: "200m"
+        cpu: "128m"
       limits:
         memory: "128Mi"
         # we dont limit cpu because cpu throttling has bad side effects,
         # and modern cpu are good at sharing and scheduling cpu resource
     ports:
-      - containerPort: 5001 #Check the image what port it is exposing
+      - containerPort: 3000 #Check the image what port it is exposing
 
-  - name: grade-submission-portal-health-checker
-    image: rslim087/kubernetes-course-grade-submission-portal-health-checker
+  - name: grade-submission-api-health-checker
+    image: rslim087/kubernetes-course-grade-submission-api-health-checker
     resources:
-      requests: #
+      requests: 
         memory: "128Mi"
         cpu: "200m"
       limits:
         memory: "128Mi"       
     # This does not have ports since this container is not a web app and not exposing a service
-    
