--- a/section3/grade-submission-api-service.yaml
+++ b/section3/grade-submission-api-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grade-submission-api
+  namespace: grade-submission
 spec:
   selector:
     app.kubernetes.io/instance: grade-submission-api # This links the service to the Pods to route traffic to.
