--- a/section7/mongodb-statefulset.yaml
+++ b/section7/mongodb-statefulset.yaml
@@ -21,6 +21,11 @@ spec:
         image: mongo:4.4
         ports:
         - containerPort: 27017
+        env: # credentials mongoDB uses to create the root user and password
+          - name: MONGO_INITDB_ROOT_USERNAME
+            value: "admin" 
+          - name: MONGO_INITDB_ROOT_PASSWORD
+            value: "password123"      
         volumeMounts:
         - name: mongodb-persistent-storage # this is the name of the volume we want to mount, which is the same as the name of the PVC
           mountPath: /data/db # this is the path where we want to mount the volume in the container, which is the default path for MongoDB
